# legged-robots-manipulation

./: .gitignore  IMPLEMENTATION_SUMMARY.md  example_usage.py  integration_example.py
nms_ops/: .gitignore  CMakeLists.txt  README.md  __init__.py  demo.py  examples.py  install.py  python_reference.py  requirements.txt  setup.py  test_nms.py  test_nms_ops.py
nms_ops/include/: nms_ops.h
nms_ops/python_bindings/: pybind_module.cpp
nms_ops/src/: nms.cpp  nms_ops.cpp  pybind.cpp
